Added testing and further code improvements

--- a/views/emails.hbs
+++ b/views/emails.hbs
@@ -17,6 +17,7 @@
     {{/each}}
     {{/if}}
     {{#if summary}}
+    {{#each emails}}
     <ul>
         {{#if this.recipient}}
         <li>Recipient: {{this.recipient}}</li>
@@ -24,6 +25,7 @@
         <li>Open action count: {{this.countOpen}}</li>
         <li>Click action count: {{this.countClick}}</li>
     </ul>
+    {{/each}}
     {{/if}}
 </body>
 </html>
